kubernetes/2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udacity-e-commerce-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: udacity-e-commerce
  type: NodePort
